--- a/miniprogram/pages/product/product.less
+++ b/miniprogram/pages/product/product.less
@@ -1,145 +1,192 @@
 @import '../../styles/theme.less';
+page {
+  background-color: #F4F4F5;
+}
 
-.bg {
-
+.header-area {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
+  z-index: 10;
+  background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/bg.jpeg?sign=d3381bf0a834bc64aa829e734be04a5b&t=1740662788');
+  background-position: bottom center;
+  background-size: 100%;
   bottom: 0;
-  z-index: -1;
-  background-image: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/product-bg.png?sign=3bdf0f60be8ec890483df77c011a22fa&t=1743174648');
-  background-size: 100% 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.container {
-  min-height: 100vh;
-  padding-bottom: calc(110rpx + env(safe-area-inset-bottom));
-  box-sizing: border-box;
-
-}
-
-.header-area {
-  position: relative;
-  height: 350rpx;
+  height: 300rpx;
 
   .header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 50rpx;
-    color: #000;
+    padding: 20rpx 60rpx;
+    color: #fff;
     position: absolute;
-    bottom: 40rpx;
+    bottom: 0rpx;
     left: 0;
     right: 0;
-    color: #fff;
 
     .header-left {
       font-size: 60rpx;
-    }
-  }
-}
-
-.bg1 {
-  background: #159A00;
-}
-
-.bg2 {
-  background: #AB8014;
-}
-
-.bg3 {
-  background: #1786B6;
-}
-
-.bg4 {
-  background: #4A3AFF;
-}
-
-.bg-other {
-  background: #4A3AFF;
-}
-
-
-.product-list-area {
-  width: 100%;
-  padding: 30rpx;
-  box-sizing: border-box;
-
-  .area-title {
-    font-size: 40rpx;
-    font-weight: 400;
-    color: #fff;
-    margin-bottom: 40rpx;
-    padding: 0 30rpx;
-  }
-}
-
-.product-list {
-  width: 100%;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: 20rpx;
-}
-
-.product-item {
-  border-radius: 30rpx;
-  padding: 30rpx;
-}
-
-.product-container {
-  display: flex;
-  flex-direction: column;
-
-  .product-title {
-    font-size: 40rpx;
-    font-weight: 400;
-    color: #fff;
-    margin-bottom: 20rpx;
-  }
-
-  .product-desc {
-    font-size: 26rpx;
-    font-weight: 400;
-    color: #fff;
-    margin-bottom: 40rpx;
-  }
-
-  .price-row {
-    background: #fff;
-    color: #353535;
-    display: inline-flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 8rpx 29rpx;
-    border-radius: 100rpx;
-
-    .price-label {
-      line-height: 1;
-      font-size: 24rpx;
       font-weight: 400;
     }
+  }
+}
 
-    .price-split {
-      line-height: 1;
-      font-size: 26rpx;
-      font-weight: 400;
-      padding: 0 10rpx;
+.container {
+  margin-top: 300rpx;
+  padding-bottom: 150rpx;
+  background: #fff;
+
+  .card-area {
+    height: 400rpx;
+    padding: 30rpx;
+    background: url('https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/card.png?sign=55415aaaf7cfcfad2b710247e3032fcf&t=1753976547') no-repeat center center;
+    background-size: 100% 100%;
+
+  }
+
+  .package-header {
+    padding: 0 60rpx;
+    color: #000;
+
+    .package-title {
+      color: #0E46FF;
+      font-size: 40rpx;
+      font-weight: 600;
+      margin-bottom: 10rpx;
     }
 
-    .price {
-      line-height: 1;
-      font-size: 35rpx;
-      font-weight: bold;
-    }
+    .package-desc {
+      font-size: 30rpx;
+      font-weight: 600;
 
-    .duration {
-      line-height: 1;
-      font-size: 25rpx;
     }
   }
+
+  .product-area {
+    padding: 40rpx 40rpx;
+
+    .service-section {
+      margin-bottom: 50rpx;
+
+      .section-title {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 30rpx;
+
+        .title-text {
+          padding: 0 20rpx;
+          font-size: 40rpx;
+          font-weight: 500;
+          color: #000;
+        }
+
+      }
+
+      .service-list {
+        border: 1px solid #d4d4d8;
+        background: #FFF;
+        border-radius: 16rpx;
+        padding: 30rpx;
+
+        .service-item {
+          margin-bottom: 25rpx;
+          padding-bottom: 25rpx;
+
+          &:last-child {
+            border-bottom: none;
+            margin-bottom: 0;
+          }
+
+          .service-name {
+            font-size: 32rpx;
+            font-weight:600;
+            color: #000;
+            margin-bottom: 8rpx;
+          }
+
+          .service-desc {
+            font-size: 26rpx;
+            font-weight: 400;
+            color: #000;
+            line-height: 1.5;
+          }
+        }
+      }
+
+      .deductible-list {
+        border: 1px solid #d4d4d8;
+        background: #FFF;
+        border-radius: 16rpx;
+        padding: 30rpx;
+        display: flex;
+        flex-direction: column;
+        gap: 30rpx;
+
+
+        .deductible-category {
+
+          .category-title {
+            font-size: 32rpx;
+            font-weight:600;
+            color: #000;
+          }
+
+          .category-items {
+            display: flex;
+            flex-direction: column;
+
+
+            .item {
+              color: #333;
+              font-weight: 400;
+              font-size: 26rpx;
+            }
+          }
+        }
+      }
+    }
+
+    .purchase-section {
+      margin-top: 60rpx;
+      padding: 0 20rpx;
+
+      .purchase-btn {
+        width: 100%;
+        height: 88rpx;
+        background: #007aff;
+        color: #fff;
+        border: none;
+        border-radius: 44rpx;
+        font-size: 32rpx;
+        font-weight: bold;
+
+        &:active {
+          background: #0056cc;
+        }
+      }
+    }
+  }
+}
+.contact-btn-area{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40rpx;
+}
+
+.contact-btn {
+  width: 100%;
+  background-color: @primary-color;
+  color: white;
+  height: 105rpx;
+  background-color: #159A00;
+  border-radius: 13rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 32rpx;
+  font-weight: 500;
 }
