--- a/miniprogram/pages/product/product.wxml
+++ b/miniprogram/pages/product/product.wxml
@@ -10,7 +10,7 @@
   <view class="card-area">
     <!-- <view class="card-item"></view> -->
      <image 
-     src="https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/card.png?sign=55415aaaf7cfcfad2b710247e3032fcf&t=1753976547" 
+     src="https://636c-cloud1-2g3w0puta97f2130-1345362468.tcb.qcloud.la/card.jpg?sign=32b739e9d5bb7f2bf8c6a90fe351d907&t=1754721338" 
      mode="scaleToFill" 
      class="card-item"
      ></image>
