--- a/miniprogram/pages/product/product.less
+++ b/miniprogram/pages/product/product.less
@@ -43,10 +43,13 @@ page {
   .card-area {
     height: 400rpx;
     padding: 30rpx;
+
     .card-item {
       width: 100%;
       height: 100%;
- 
+      border-radius: 16rpx;
+      overflow: hidden;
+
     }
 
   }
