--- a/miniprogram/pages/index/index.less
+++ b/miniprogram/pages/index/index.less
@@ -57,7 +57,7 @@ page{
 
 .purchased-services {
 
-  padding: 0 60rpx;
+  padding: 40rpx 0 30rpx 0;
   display: flex;
   flex-direction: column;
   gap: 20rpx;
@@ -67,10 +67,11 @@ page{
     font-size: 44rpx;
     font-weight:400;
     color: #000;
-    padding: 20rpx 0;
+    padding: 20rpx 60rpx;
   }
   
   .service-list {
+    padding: 0 38rpx;
     display: flex;
     flex-direction: column;
     gap: 30rpx;
