--- a/miniprogram/pages/product/product.less
+++ b/miniprogram/pages/product/product.less
@@ -83,7 +83,7 @@ page {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-bottom: 30rpx;
+        margin-bottom: 40rpx;
 
         .title-text {
           padding: 0 20rpx;
@@ -92,6 +92,16 @@ page {
           color: #000;
         }
 
+
+      }
+
+      .section-desc {
+        padding: 0 20rpx;
+        font-size: 30rpx;
+        line-height: 37rpx;
+        font-weight: 500;
+        color: #000;
+        margin-bottom: 40rpx;
       }
 
       .service-list {
